--- a/traefik_external/compose.yaml
+++ b/traefik_external/compose.yaml
@@ -112,6 +112,20 @@ services:
       homepage.icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/logdy.png
       homepage.href: "https://traefik-log-external.CHANGEME.casa"
 
+  socket-proxy:
+    image: lscr.io/linuxserver/socket-proxy:latest
+    environment:
+      - CONTAINERS=1
+      - POST=0
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    ports:
+      - 2375:2375
+    restart: always
+    read_only: true
+    tmpfs:
+      - /run
+
 networks:
   traefik_internal:
     driver: bridge
