--- a/traefik_external/.env.example
+++ b/traefik_external/.env.example
@@ -1,4 +1,4 @@
 CF_DNS_API_TOKEN=NOT_REAL_UaOYrCYkeEPk6q1H
 CF_TRAEFIK_TUNNEL_TOKEN=NOT_REAL_ceFh5BEalnUrHxFPmhAAAAgE49iGjj
 CS_TRAEFIK_BOUNCER_KEY=NOT_REAL_ln3Q3cof5zm9X3SHRpBdkZ
-BOUNCER_HOST=192.168.HOST.IP:5080
+BOUNCER_HOST=crowdsec:8080
