--- a/crowdsec/crowdsec_ingest/config/acquis.yaml
+++ b/crowdsec/crowdsec_ingest/config/acquis.yaml
@@ -10,6 +10,7 @@
 source: docker
 container_name:
  - traefik-external-traefik-access-logs-1
-docker_host: tcp://192.168.TRAEFIK_EXTERNAL_HOST.IP:2375
+# use tcp://192.168.TRAEFIK_EXTERNAL_HOST.IP:2375 if not using crowdsec_overlay
+docker_host: tcp://traefik-ext-socket-proxy:2375
 labels:
   type: traefik
