refactor: Normalize network names with blog and add missing CHANGEME

--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -1,5 +1,5 @@
 AUTHENTIK_TAG=2025.2
-PG_PASS=[[AUTHENTIK_PG_PASS]]
-AUTHENTIK_SECRET_KEY=[[AUTHENTIK_SECRET_KEY]]
-AUTHENTIK_TRAEFIK_OUTPUT_TOKEN=[[AUTHENTIK_TRAEFIK_OUTPUT_TOKEN]]
-AUTHENTIK_TRAEFIK_EXT_OUTPOST_TOKEN=[[AUTHENTIK_TRAEFIK_EXT_OUTPOST_TOKEN]]
+PG_PASS=[[CHANGEME_AUTHENTIK_PG_PASS]]
+AUTHENTIK_SECRET_KEY=[[CHANGEME_AUTHENTIK_SECRET_KEY]]
+AUTHENTIK_TRAEFIK_OUTPUT_TOKEN=[[CHANGEME_AUTHENTIK_TRAEFIK_OUTPUT_TOKEN]]
+AUTHENTIK_TRAEFIK_EXT_OUTPOST_TOKEN=[[CHANGEME_AUTHENTIK_TRAEFIK_EXT_OUTPOST_TOKEN]]
