--- a/traefik_external/traefik/dynamic_config/global.yml
+++ b/traefik_external/traefik/dynamic_config/global.yml
@@ -3,7 +3,7 @@ http:
     anyreg:
       redirectregex:
         regex: ^.*
-        replacement: https://MY_SITE.com
+        replacement: https://MY_SITE_CHANGEME.com
     cloudflarewarp:
       plugin:
         cloudflarewarp:
