--- a/example_services/compose-ext-auth-service.yaml
+++ b/example_services/compose-ext-auth-service.yaml
@@ -3,14 +3,14 @@ services:
   echo:
     image: mendhak/http-https-echo:36
     networks:
-      - public_overlay
+      - public_web
     labels:
       traefik.enable: true
       traefik.http.routers.echo2.rule: Host(`echo2.CHANGEME.com`)
       traefik.http.services.echo2.loadbalancer.server.port: 8080
       traefik.http.routers.echo2.middlewares: authentik-proxy@docker
-      traefik.docker.network: public_overlay
+      traefik.docker.network: public_web
       kop.namespace: public
 networks:
-  internal_overlay:
+  internal_web:
     external: true
