--- a/example_services/compose-external-service.yaml
+++ b/example_services/compose-external-service.yaml
@@ -3,13 +3,13 @@ services:
   echo:
     image: mendhak/http-https-echo:36
     networks:
-      - public_overlay
+      - public_web
     labels:
       traefik.enable: true
       traefik.http.routers.echo1.rule: Host(`echo1.CHANGEME.com`)
       traefik.http.services.echo1.loadbalancer.server.port: 8080
-      traefik.docker.network: public_overlay
+      traefik.docker.network: public_web
       kop.namespace: public
 networks:
-  public_overlay:
+  public_web:
     external: true
