--- a/example_services/compose-internal-service.yaml
+++ b/example_services/compose-internal-service.yaml
@@ -3,12 +3,12 @@ services:
   echo:
     image: mendhak/http-https-echo:36
     networks:
-      - internal_overlay
+      - internal_web
     labels:
       traefik.enable: true
       traefik.http.routers.echo1.rule: Host(`echo1.CHANGEME.casa`)
       traefik.http.services.echo1.loadbalancer.server.port: 8080
-      traefik.docker.network: internal_overlay
+      traefik.docker.network: internal_web
 networks:
-  internal_overlay:
+  internal_web:
     external: true
