fix: Config fixes
Suggested by @ChanningHe from https://github.com/FoxxMD/blog/discussions/5#discussioncomment-13329619

--- a/traefik_external/traefik/dynamic_config/global.yml
+++ b/traefik_external/traefik/dynamic_config/global.yml
@@ -8,7 +8,7 @@ http:
       plugin:
         cloudflarewarp:
           disableDefault: false
-          trustedip: 172.28.0.1/24
+          trustip: 172.28.0.1/24
     crowdsec:
       plugin:
         csbouncer:
