--- a/traefik_external/compose.yaml
+++ b/traefik_external/compose.yaml
@@ -124,6 +124,7 @@ services:
     environment:
       - CONTAINERS=1
       - POST=0
+      - INFO=1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
